--- a/Content/css/about.css
+++ b/Content/css/about.css
@@ -1,252 +1,4 @@
-﻿html {
-    scroll-behavior: smooth;
-}
-
-*,
-::after,
-::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Rubik', sans-serif;
-    overflow-x: hidden;
-    width: 85%;
-    margin: auto;
-}
-
-ul {
-    list-style-type: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-
-
-img {
-    max-width: 100%;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Rubik', sans-serif;
-}
-
-a,
-p,
-span,
-button,
-textarea,
-input,
-select,
-option {
-    font-family: 'Mitr', sans-serif;
-}
-
-    input,
-    textarea,
-    button:focus {
-        outline: 0;
-        box-shadow: none;
-    }
-
-/*  global classes */
-/* navbar */
-nav {
-    background: #d35555;
-    padding: 1rem 1.5rem;
-}
-
-/* fixed nav */
-.fixed-nav {
-    position: fixed;
-    top: 0;
-    left: 7.5%;
-    right: 7.5%;
-    width: 85%;
-    background: #d35555;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    z-index: 9999;
-}
-
-    .fixed-nav .links a {
-        color: #fff;
-    }
-
-.links a i {
-    color: #fff;
-    font-size: 17px;
-}
-
-.nav-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav-toggle {
-    position: relative;
-    z-index: 9999;
-    font-size: 1.5rem;
-    color: #fff;
-    background: transparent;
-    border-color: transparent;
-    transition: all 0.3s linear;
-    cursor: pointer;
-}
-
-    .nav-toggle:hover {
-        color: hsl(209, 61%, 16%);
-    }
-
-.nav-header .logo {
-    display: flex;
-    align-items: center;
-}
-
-    .nav-header .logo img {
-        width: 60px;
-        margin-top: -2rem;
-    }
-
-    .nav-header .logo p {
-        font-size: 18px;
-        color: #000;
-        font-weight: 600;
-        margin-top: -1rem;
-    }
-
-.links-container {
-    height: 0;
-    overflow: hidden;
-    transition: all 0.3s linear;
-}
-
-.show-links {
-    height: 200px;
-}
-
-.links a {
-    background: transparent;
-    color: #fff;
-    font-size: 17px;
-    text-transform: capitalize;
-    display: block;
-    transition: all 0.3s linear;
-    font-weight: bold;
-    padding: 0.75rem 0;
-}
-
-.scroll-link.active {
-    color: #fff;
-}
-
-/* Responsive Section  */
-@media screen and (min-width: 800px) {
-    nav {
-        background: #d35555;
-        height: 71px;
-        line-height: 52px;
-    }
-
-    .nav-center {
-        width: 85%;
-        max-width: 1170px;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    .nav-header {
-        padding: 0;
-    }
-
-
-    .nav-toggle {
-        display: none;
-    }
-
-    .links-container {
-        height: auto !important;
-    }
-
-    .links {
-        display: flex;
-    }
-
-        .links a {
-            background: transparent;
-            color: #fff;
-            font-size: 17px;
-            text-transform: capitalize;
-            display: block;
-            transition: all 0.3s linear;
-            margin: 0 1rem;
-            font-weight: 500;
-            padding: 0;
-        }
-
-    .scroll-link.active {
-        color: #fff;
-        background: linear-gradient(360deg, #E8AC13 -105.09%, #D35555 33.45%);
-        border-bottom: 1px solid #e8ac13;
-    }
-
-    .scroll-link {
-        position: relative;
-    }
-
-        .scroll-link::after {
-            content: '';
-            display: block;
-            width: 0;
-            height: 2px;
-            background: linear-gradient(#dac71d, #d39c06);
-            transition: width .3s;
-        }
-
-        .scroll-link:hover::after {
-            width: 100%;
-        }
-}
-
-@media screen and (max-width: 1024px) {
-    body {
-        width: 100%;
-        margin: auto;
-        margin-top: 0;
-    }
-
-    .fixed-nav {
-        left: 0;
-        width: 100%;
-    }
-
-    .nav-center {
-        width: 90vw;
-    }
-}
-
-@media screen and (max-width: 800px) {
-    .nav-header .logo img {
-        margin-top: 0;
-    }
-
-    .nav-header .logo p {
-        margin-top: 0;
-    }
-}
-
-/* About Us  */
+﻿/* About Us  */
 section.about-us {
     margin: 20px 0;
 }
