--- a/Site.Master
+++ b/Site.Master
@@ -60,7 +60,7 @@
                                 About</a>
                         </li>
                         <li>
-                            <a href="ManageSuggestions.aspx" class="scroll-link"><i class="fa-solid fa-screwdriver-wrench"></i>
+                            <a href="Suggestions.aspx" class="scroll-link"><i class="fa-solid fa-screwdriver-wrench"></i>
                                 Admin panel</a>
                         </li>
                         <li>
@@ -119,6 +119,6 @@
   <script src="Content/js/bootstrap.min.js"></script>
   <script src="Content/js/master.js"></script>
   <script src="Content/js/translator.js"></script>
-  <script src="Content/js/manageSuggestions.js"></script>
+  <script src="Content/js/suggestions.js"></script>
 </body>
 </html>
