--- a/Content/css/suggestions.css
+++ b/Content/css/suggestions.css
@@ -1,6 +1,8 @@
 ﻿* {
-    --listItem-bg-color: #EAEAEA;
-    --actionMenu-bg-color: #F5F5F5;
+    --listItem-color: #F5F5F5;
+    --actionMenu-color: #EAEAEA;
+    --listItem-active: #9F9F9F;
+    --theme-white: #f5f5f5;
     --theme-black: #323232;
 }
 
@@ -19,6 +21,17 @@
     padding: 2em 0;
     margin: 0 5rem;
 }
+
+.contentWrapper .header {
+    display: flex;
+    align-items: center;
+    color: var(--primary-color);
+}
+
+.contentWrapper .header i {
+    font-size: 30px;
+    margin-right: .5em;
+ }
 
 .contentContainer {
     display: flex;
@@ -72,7 +85,7 @@
 }
 
 .cboFilter, .txtSearch {
-    padding: 1em 1em;
+    padding: 0 0.5em;
     height: 2em;
     border: 2px solid var(--primary-color);
     border-radius: 5px;
@@ -97,9 +110,22 @@
     flex-direction: column;
     padding: 1em 1.5em;
     margin-top: 1em;
-    background: var(--listItem-bg-color);
+    background: var(--listItem-color);
     border-radius: 5px;
     cursor: pointer;
+    box-shadow: none;
+    transition: all .5s ease-out;
+}
+
+.noData {
+    padding: 2em 0;
+    flex-direction: row;
+    align-items: center;
+}
+
+.noData i {
+    margin: 0 .5em 0 1em;
+    font-size: 30px;
 }
 
 .listItem:first-child {
@@ -107,7 +133,11 @@
 }
 
 .listItem:hover {
-    background: rgba(var(--listItem-bg-color, 0.6));
+    background: var(--actionMenu-color);
+}
+
+.listItem:active {
+    background: var(--listItem-active);
 }
 
 .topRow {
@@ -156,7 +186,7 @@
     flex-direction: column;
     max-height: 95%;
     width: 100%;
-    background: var(--actionMenu-bg-color);
+    background: var(--actionMenu-color);
     border-radius: 5px;
     padding: 1.5em 1.5em 2em;
 
@@ -192,14 +222,61 @@
 
 #btnAccept, #btnReject{
     flex: 0.5;
+    border: 2px solid var(--primary-color);
+    border-radius: 5px;
+    padding: 0.5em;
+    transition: all .3s ease-out;
 }
 
 #btnAccept {
     margin-right: 1em;
+    background: var(--primary-color);
+    color: var(--theme-white);
+}
+
+#btnAccept:hover {
+    border: 2px solid var(--primary-color-hover);
+    background: var(--primary-color-hover);
+}
+
+#btnAccept:active{
+    border: 2px solid var(--primary-color-active);
+    background: var(--primary-color-active);
+}
+
+#btnReject {
+    color: var(--primary-color);
+    background: var(--actionMenu-color);
+}
+
+#btnReject:hover {
+    color: var(--primary-color-hover);
+    border: 2px solid var(--primary-color-hover);
+}
+
+#btnReject:active {
+    color: var(--primary-color-active);
+    border: 2px solid var(--primary-color-active);
 }
 
 #btnEdit {
     flex: 1;
+    background: var(--primary-color);
+    color: var(--theme-white);
+    padding: 0.5em;
+    border-radius: 5px;
+    border: 2px solid var(--primary-color);
+    transition: all .3s ease-out;
+}
+
+#btnEdit:hover {
+    border: 2px solid var(--primary-color-hover);
+    background: var(--primary-color-hover);
+}
+
+#btnEdit:active {
+    border: 2px solid var(--primary-color-active);
+    background: var(--primary-color-active);
 }
 
 /* Main content complete */
@@ -210,25 +287,143 @@
 /* Edit Modal content */
 /* Edit Modal content */
 /* Edit Modal content */
-#modalWindow {
+#editModalWindow {
     display: flex;
     justify-content: center;
     align-items: center;
     position: absolute;
     width: 100vw;
     height: 110vh;
+    pointer-events: all;
     background: rgba(0, 0, 0, 0.5);
     opacity: 0;
     visibility: hidden;
-    transition: all .5s ease-out;
 }
 
-.modalBody {
-    width: 50%;
+#editModalWindow h3{
+    margin: 0;
+}
+
+.editModalBody {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
     max-height: 70%;
     background: var(--theme-white);
     border-radius: 5px;
     padding: 1.5em 2em;
+    box-shadow: 0 0 20px 1px var(--theme-black);
+}
+
+.editModalBody div {
+    margin-bottom: 1em;
+}
+
+.editModalBody div:last-child {
+    margin-bottom: 0;
+}
+
+.editModalBody .header {
+    display: flex;
+    align-items: center;
+}
+
+.editModalBody .header i {
+    font-size: 30px;
+    margin-right: .5em;
+}
+
+.editModalBody h5 {
+    color: var(--primary-color);
+}
+
+.editTopRow {
+    display: flex;
+}
+
+.editTopRow > div {
+    flex: 0.5;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0;
+}
+
+.editTopRow > div input {
+    border-radius: 5px;
+    padding: 0.5em;
+    border: 2px solid var(--primary-color);
+    background: var(--theme-white);
+}
+
+.editTopRow > div input:focus {
+    border: 3px solid var(--primary-color);
+}
+
+.editTopRow > div:first-child {
+    margin-right: 2em;
+}
+
+.editBottomRow {
+    flex: 0.5;
+    display: flex;
+    flex-direction: column;
+}
+
+.editBottomRow textarea {
+    padding: 1em;
+    resize: none;
+    border-radius: 5px;
+    border: 2px solid var(--primary-color);
+    background: var(--theme-white);
+}
+
+.editBottomRow textarea:focus {
+    border: 3px solid var(--primary-color);
+}
+
+.editButtonContainer {
+    padding: 1em 0;
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+#btnEditConfirm {
+    border-radius: 5px;
+    padding: 0.5em 1em;
+    border: 2px solid var(--primary-color);
+    background: var(--primary-color);
+    color: var(--theme-white);
+    margin-right: 1em;
+    transition: all .3s ease-out;
+}
+
+#btnEditConfirm:hover {
+    border: 2px solid var(--primary-color-hover);
+    background: var(--primary-color-hover);
+}
+
+#btnEditConfirm:active {
+    border: 2px solid var(--primary-color-active);
+    background: var(--primary-color-active);
+}
+
+#btnEditCancel {
+    border-radius: 5px;
+    padding: 0.5em 1em;
+    border: 2px solid var(--primary-color);
+    background: var(--theme-white);
+    color: var(--primary-color);
+    transition: all .3s ease-out;
+}
+
+#btnEditCancel:hover {
+    border: 2px solid var(--primary-color-hover);
+    color: var(--primary-color-hover);
+}
+
+#btnEditCancel:active {
+    border: 2px solid var(--primary-color-active);
+    color: var(--primary-color-active);
 }
 
 @keyframes fadeIn {
